--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "ts-node ./src/index.ts",
-		"start": "node ./dist/index"
+		"start": "node ./src/index.js"
 	},
 	"keywords": [],
 	"author": "",
