--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "ts-node ./src/index.ts",
+		"dev": "tsx watch ./src/index.ts",
 		"start": "node ./src/index.js"
 	},
 	"keywords": [],
@@ -27,6 +27,7 @@
 		"express": "^4.19.2",
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.12.0",
+		"tsx": "^4.15.3",
 		"xlsx": "^0.18.5"
 	}
 }
